buildscript {
    repositories {
        mavenCentral()
        maven {
            name = 'Sonatype Nexus Snapshots'
            url = 'https://oss.sonatype.org/content/repositories/snapshots/'
        }
    }
}

plugins {
    id 'war'
    id 'eclipse-wtp'
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly project(path: ':daytrader-ee7-ejb', configuration: 'archives')
    compileOnly group: 'javax.enterprise.concurrent', name: 'javax.enterprise.concurrent-api', version: '1.0'
    compileOnly group: 'javax.json', name: 'javax.json-api', version: '1.0'
    compileOnly group: 'javax.enterprise', name: 'cdi-api', version: '1.2'
    compileOnly group: 'javax.ejb', name: 'javax.ejb-api', version: '3.2'
    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
    compileOnly group: 'javax.faces', name: 'javax.faces-api', version: '2.2'
    compileOnly group: 'javax.jms', name: 'javax.jms-api', version: '2.0'
    compileOnly group: 'javax.websocket', name: 'javax.websocket-api', version: '1.1'
    compileOnly group: 'javax.annotation', name: 'javax.annotation-api', version: '1.2'

    implementation group: 'taglibs', name: 'standard', version: '1.1.1'
    compileOnly group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.2.Final'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

eclipse {
    wtp {
        facet {
            facets = []
            facet name: 'jst.java', type: 'fixed'
            facet name: 'jst.web', type: 'fixed'
            facet name: 'jst.web', version: '3.1'
            facet name: 'jst.java', version: '17' 
        }
    }
}
